# src/modules/simplest-auth/auth-client.dto.ts
@@ -1,0 +1,4 @@
+export class AuthClientDto {
+    name: string;
+    pass: string;
+}
